--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: System-on-Chip Design & Verification
-author:
-  name: Michelle Lynch
-  email: your-email@domain.com
+author:Natalie
+  name: Nokuvimba Natalie Chiyaka
+  email: G00423951@ATU.IE
 description: "A blog."
 
 # Build settings
