--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: System-on-Chip Design & Verification
-author:Natalie
+author:
   name: Nokuvimba Natalie Chiyaka
   email: G00423951@ATU.IE
 description: "A blog."
